--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -8,12 +8,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Get repository name
-        id: repo-name
-        uses: MariachiBear/get-repo-name-action@v1.3.0
-        with:
-          with-owner: 'true'
-          string-case: 'uppercase'
+
       - name: Set up Python 3.10
         uses: actions/setup-python@v5
         with:
@@ -28,7 +23,5 @@ jobs:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
-          slug: loonghao/${{ steps.repo-name.outputs.repository-name }}
-          files: 'coverage.xml'
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: loonghao/dcc-mcp-rpyc
