--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,9 @@
-poetry
-nox
-pytest
+poetry>=1.7.0
+nox>=2023.4.22
+pytest>=7.4.0
+pytest-cov>=6.0.0
+ruff>=0.9.0
+mypy>=1.5.1
+isort>=5.13.2
+pre-commit>=3.5.0
+uv>=0.1.0
