--- a/.github/workflows/mr-test.yml
+++ b/.github/workflows/mr-test.yml
@@ -8,14 +8,13 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
-        include:
-          - os: windows-latest
-            python-version: "3.7"
         exclude:
           - os: macos-latest
-            python-version: "3.7"
+            python-version: '3.7'
           - os: ubuntu-latest
-            python-version: "3.7"
+            python-version: '3.7'
+          - os: windows-latest
+            python-version: '3.7'
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
