--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -147,18 +147,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.9'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install uv
-
-      # Download all artifacts
+      
       - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
@@ -169,41 +158,29 @@ jobs:
       - name: List all artifacts
         run: find dist -type f | sort
 
-      # Generate release notes from changelog
       - name: Generate Release Notes
-        if: startsWith(github.ref, 'refs/tags/')
-        id: release-notes
+        id: release_notes
         run: |
           VERSION=${GITHUB_REF#refs/tags/}
-          # No need to remove 'v' prefix as we're using numeric versioning
-
-          # Try to find the version in CHANGELOG.md
-          if [ -f CHANGELOG.md ]; then
-            CHANGES=$(grep -A 100 "## \[$VERSION\]" CHANGELOG.md | grep -B 100 -m 2 "^## " | grep -v "^## \[$VERSION\]" | grep -v "^## " | sed '/^$/d')
-          else
-            CHANGES="No changelog found for version $VERSION"
-          fi
-
-          # Load template and replace variables
+          CHANGES=$(grep -A 100 "## $VERSION" CHANGELOG.md | grep -B 100 -m 2 "^## " | grep -v "^## $VERSION" | grep -v "^## " | sed '/^$/d')
           TEMPLATE=$(cat .github/release-template.md)
           TEMPLATE="${TEMPLATE//\$RELEASE_VERSION/$VERSION}"
           TEMPLATE="${TEMPLATE//\$CHANGES/$CHANGES}"
-
-          # Create a temporary file for the release notes
-          echo "$TEMPLATE" > release-notes.md
+          echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
+          echo "$TEMPLATE" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
         shell: bash
 
       # Update release notes
       - name: Update Release Notes
-        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v2
         with:
-          body_path: release-notes.md
+          body: ${{ env.RELEASE_NOTES }}
           files: dist/*
           fail_on_unmatched_files: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+      
       # Publish to PyPI
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
