--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -184,3 +184,7 @@ jobs:
       # Publish to PyPI
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: dist/
+          skip-existing: true
+          verbose: true
