--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,14 +21,12 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
 ]
 
 [tool.poetry.dependencies]
 python = ">=3.7,<4.0"
 rpyc = ">=6.0.0,<7.0.0"
-dcc-mcp-core = ">=0.1.0,<1.0.0"
-
+dcc-mcp-core = "^0.3.0"
 
 [tool.poetry.urls]
 Homepage = "https://github.com/loonghao/dcc-mcp-rpyc"
