--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ classifiers = [
 python = ">=3.7,<4.0"
 rpyc = ">=6.0.0,<7.0.0"
 dcc-mcp-core = "^0.4.0"
+zeroconf = ">=0.38.0,<0.132.0"
 
 [tool.poetry.urls]
 Homepage = "https://github.com/loonghao/dcc-mcp-rpyc"
